1.2.3 - TBD
    * Depth of field now only uses one scene variable (removed infDof variable)
    * Fixed corner Acacia/Dark Oak stairs rendering
    * Hay bales now render with the correct orientation
    * Improved rendering of some blocks in the 2D map
    * Fixed sign texture loading error (item icon was loaded rather than the
      entity texture)
    * Added chunk hover indicator in 2D map
    * Fixed error causing rayDepth setting to not be saved for scenes
    * Fixed error preventing naming and overwriting of custom camera presets
    * Changed map status text color to red to improve visibility
    * Added checkbox on the Advanced tab of Render controls which enables
      automatic shutdown of the computer after render completion

1.2.2 - 2014-01-13
    * Added "follow player" option for the 2D map
    * Made 2D map drawing more efficient
    * Adjusted default Sun intensity to 1.25
    * It is now possible to save and load custom camera presets
    * Made Render Controls dialog more compact
    * Moved camera presets to drop-down list
    * Added Granite, Diorite, and Andesite stone blocks
    * Chunky now dynamically refreshes the main map view based on
      changes to the Minecraft world as detected in the filesystem
    * Added Chunky commands: -snapshot, -version, -download-mc
    * Added launcher commands: --setup, --update, --version, --verbose
    * Fixed error causing the launcher to crash when running in headless mode
      if the launcher GUI had not previously been run
    * The launcher (v1.7.0 and later) now ignores older releases if a newer
      version already is installed
    * Using -render without a scene name argument prints out available scenes
    * Added Help tab listing keyboard shortcuts in the Render Controls window
    * Pressing U in the Render Preview window makes it go fullscreen
    * The scene selector can now to delete scenes or export scenes to Zip file
    * Fixed potential crash in the launcher from a clean install
